--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<name>Explore With Me</name>
 	<modules>
 		<module>stats-server</module>
+		<module>main-service</module>
 	</modules>
 
 	<groupId>ru.practicum</groupId>
@@ -24,20 +25,7 @@
 		<java.version>21</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok-mapstruct-binding</artifactId>
-			<version>0.2.0</version>
-			<scope>provided</scope>
-		</dependency>
-	</dependencies>
+
 	<build>
 		<pluginManagement>
 			<plugins>
