--- a/stats-server/client/src/main/resources/application.properties
+++ b/stats-server/client/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
 server.port=8080
-stats-server.url=http://stats-service:9090
+stats-service.url=http://stats-service:9090
