--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -1,26 +1,20 @@
-spring.application.admin.jmx-name=ewm-service
 server.port=8080
-
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
-
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/stat-server
-spring.datasource.username=stat-server
-spring.datasource.password=stat-server
-spring.datasource.hikari.connection-timeout= 3000
-spring.datasource.hikari.max-lifetime= 5
-
-
-
-
+#spring.datasource.url=jdbc:postgresql://localhost:5433/ewm-service
+spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm-service
+spring.datasource.username=ewm-service
+spring.datasource.password=ewm-service
+spring.datasource.hikari.connection-timeout=3000
+spring.datasource.hikari.max-lifetime=5
 #---
 spring.config.activate.on-profile=test
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:stat-server
-spring.datasource.username=stat-server
-spring.datasource.password=stat-server
-spring.datasource.hikari.connection-timeout= 3000
-spring.datasource.hikari.max-lifetime= 5
+spring.datasource.url=jdbc:h2:mem:ewm-service
+spring.datasource.username=ewm-service
+spring.datasource.password=ewm-service
+spring.datasource.hikari.connection-timeout=3000
+spring.datasource.hikari.max-lifetime=5
