test profiles added

--- a/stats-server/service/src/main/resources/application-test.properties
+++ b/stats-server/service/src/main/resources/application-test.properties
@@ -3,8 +3,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://stats-db:5432/stat-server
+spring.config.activate.on-profile=test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:stat-server
 spring.datasource.username=stat-server
 spring.datasource.password=stat-server
 spring.datasource.hikari.connection-timeout=3000
