--- a/ewm-service/src/main/resources/application-test.properties
+++ b/ewm-service/src/main/resources/application-test.properties
@@ -2,8 +2,9 @@ server.port=8080
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm-service
+spring.config.activate.on-profile=test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:ewm-service
 spring.datasource.username=ewm-service
 spring.datasource.password=ewm-service
 spring.datasource.hikari.connection-timeout=3000
