--- a/stats-server/service/src/main/resources/application-test.properties
+++ b/stats-server/service/src/main/resources/application-test.properties
@@ -10,3 +10,6 @@ spring.datasource.username=stat-server
 spring.datasource.password=stat-server
 spring.datasource.hikari.connection-timeout=3000
 spring.datasource.hikari.max-lifetime=5
+
+logging.level.root=DEBUG
+
