--- a/stats-server/service/src/main/resources/application-test.properties
+++ b/stats-server/service/src/main/resources/application-test.properties
@@ -11,5 +11,5 @@ spring.datasource.password=stat-server
 spring.datasource.hikari.connection-timeout=3000
 spring.datasource.hikari.max-lifetime=5
 
-logging.level.root=DEBUG
+logging.level.root=INFO
 
