Added users endpoints /admin/users with post, get, delete Added HitSender util Added app config for HitSender and may be for the future

--- a/ewm-service/src/main/resources/application-test.properties
+++ b/ewm-service/src/main/resources/application-test.properties
@@ -1,4 +1,6 @@
 server.port=8080
+server.error.include-binding-errors=always
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
@@ -9,3 +11,6 @@ spring.datasource.username=ewm-service
 spring.datasource.password=ewm-service
 spring.datasource.hikari.connection-timeout=3000
 spring.datasource.hikari.max-lifetime=5
+
+ewm.ewm-service.name=ewm-service
+ewm.stats-server.url=http://localhost:9090
