--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5433/ewm-service
-#spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm-service
+#spring.datasource.url=jdbc:postgresql://localhost:5433/ewm-service
+spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm-service
 spring.datasource.username=ewm-service
 spring.datasource.password=ewm-service
 spring.datasource.hikari.connection-timeout=3000
