--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -16,6 +16,6 @@ logging.level.root=INFO
 
 
 ewm.ewm-service.name=ewm-service
-ewm.stats-server.url=http://localhost:9090
-#ewm.stats-server.url=http://java-explore-with-me-stats-server-1:9090
+#ewm.stats-server.url=http://localhost:9090
+ewm.stats-server.url=http://java-explore-with-me-stats-server-1:9090
 
